--- a/package.json
+++ b/package.json
@@ -46,9 +46,9 @@
     }
   },
   "dependencies": {
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
+    "classnames": "^2.3.1",
     "prop-types": "^15.7.2",
-    "classnames": "^2.3.1"
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1"
   }
 }
