--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "classnames": "^2.3.1",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "react-dom": "^17.0.1",
+    "react-uuid": "^1.0.2"
   }
 }
